--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl:          /
 
 author:
   name:           'ardentj'
-#  url:            https://twitter.com/therealchiko
+  url:            https://beatrix.io
 
 paginate:         5
 
