--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 #relative_permalinks: true
 
 # Setup
-title:            'WholeShebang.net Blog'
+title:            'The Whole Shebang'
 tagline:          'Technical Support and Solutions'
 description:      "Updates and Notices about Future Services"
 url:              https:/wholeshebang.net
